# annotaid-ai-backend

./: .dockerignore  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mypy.ini  pyproject.toml
.github/workflows/: docker.yaml  dockerhub.yaml  release.yaml
docker/: backend.dockerfile  docker-compose.dev.yml  docker-compose.prod.yml  worker.dockerfile
scripts/: download_mc_weights.ps1  download_mc_weights.sh  download_np_weights.ps1  download_np_weights.sh  download_nuclick_weights.ps1  download_nuclick_weights.sh  download_sam_weights.ps1  download_sam_weights.sh
scripts/api/: prestart.sh  start.sh
scripts/production/: README.md  check_image_update.sh  redeploy_backend.sh  redeploy_postgis.sh  redeploy_reader.sh  redeploy_redis.sh  redeploy_worker.sh  updater.sh
scripts/weights/: download_mc_weights.ps1  download_mc_weights.sh  download_np_weights.ps1  download_np_weights.sh  download_nuclick_weights.ps1  download_nuclick_weights.sh  download_sam_weights.ps1  download_sam_weights.sh  functions.ps1  functions.sh  index.ps1  index.sh
src/: db_models.py  main.py  middlewares.py  worker.py
src/alembic/: env.py
src/alembic/versions/: a86460e5b39e_create_tables_for_al.py  b5763623f544_slides_path_trgm_index.py  b9196092e5f9_add_model_hash.py
src/api/api_v1/: api.py
src/api/api_v1/endpoints/: active_learning.py  mc.py  np.py  nuclick.py  sam.py
src/celery/: __init__.py  database.py
src/celery/active_learning/: definitions.py  tasks.py  utils.py
src/celery/mc/: definitions.py  tasks.py
src/celery/np/: definitions.py  tasks.py
src/celery/nuclick/: definitions.py  tasks.py
src/celery/sam/: definitions.py  tasks.py
src/celery/shared/: __init__.py  tasks.py
src/core/: celery.py  config.py  database.py  redis.py
src/examples/: image.txt  image_512.txt
src/models/: __init__.py
src/models/mc/: custom_types.py  predict.py  transforms.py
src/models/np/: predict.py
src/models/nuclick/: architecture.py  layers.py  predict.py
src/schemas/: active_learning.py  celery.py  mc.py  np.py  nuclick.py  sam.py  shared.py
src/scripts/: wait-for-db.py
src/utils/: api.py  pagination.py  utils.py
